[Minor Updates] Remove VX deps and Preface page of each tab (#13)
* add dependencies

* fix babel issue

* save yarn and package.json

* add examples

* Add code to avoid window undefined error

* remove Preface pages of each tab

* refresh yarn.lock

* add yarn.lock

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "deploy": "GIT_USER=gazcn007 docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.40",
     "@docusaurus/preset-classic": "^2.0.0-alpha.40",
-    "@patternize/components": "^0.0.4",
+    "@patternize/components": "^0.0.5",
     "classnames": "^2.2.6",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
