--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "my-website",
+  "name": "patternize.io",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "GIT_USER=gazcn007 USE_SSH=true docusaurus deploy"
+    "deploy": "GIT_USER=gazcn007 USE_SSH=true docusaurus deploy",
+    "build:components": "./build-components.sh"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
-    "@patternize/components": "^0.0.7",
+    "@docusaurus/core": "^2.4.3",
+    "@docusaurus/preset-classic": "^2.4.3",
+    "@patternize/components": "^0.1.3",
     "classnames": "^2.2.6",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "browserslist": {
     "production": [
