--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "deploy": "GIT_USER=gazcn007 USE_SSH=true DEPLOYMENT_BRANCH=master docusaurus deploy",
+    "deploy": "GIT_USER=gazcn007 USE_SSH=true DEPLOYMENT_BRANCH=main docusaurus deploy",
     "build:components": "./build-components.sh"
   },
   "dependencies": {
